logs/errors/output_61570.out
  File "testingLoop.py", line 130
    if not os.path.exists(vid_path):
                                   ^
SyntaxError: invalid syntax
